--- a/app/src/main/res/layout/activity_intro_slider.xml
+++ b/app/src/main/res/layout/activity_intro_slider.xml
@@ -27,6 +27,7 @@
         android:minWidth="110dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/main_color"
         app:layout_constraintBottom_toTopOf="@+id/text2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
