--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,11 @@
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        />
+
+
+   <FrameLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+      android:id="@+id/fragment_container"/>
+
 </androidx.drawerlayout.widget.DrawerLayout>
