--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="200dp"
     android:padding="20dp"
-    android:background="@color/material_dynamic_neutral_variant90">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    android:gravity="bottom"
+    android:background="@color/main_color">
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="match_parent"
-        android:background="@drawable/mnnit"
-        />
-        <TextView
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:text="MNNIT ALLAHABAD"
-            android:paddingLeft="30dp"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:paddingVertical="30dp"
-            />
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:src="@drawable/mnnit"/>
 
-    </LinearLayout>
+
+    <!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="180dp"-->
+<!--    android:padding="20dp"-->
+<!--    android:background="@color/material_dynamic_neutral_variant90">-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:orientation="horizontal">-->
+
+<!--    <ImageView-->
+<!--        android:layout_width="120dp"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@drawable/mnnit"-->
+<!--        />-->
+<!--        <TextView-->
+<!--            android:layout_width="350dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="MNNIT ALLAHABAD"-->
+<!--            android:paddingLeft="30dp"-->
+<!--            android:textSize="15sp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:paddingVertical="30dp"-->
+<!--            />-->
+
+<!--    </LinearLayout>-->
 
 
 </LinearLayout>
