--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <group android:checkableBehavior="single">
         <item
             android:id="@+id/home"
             android:icon="@drawable/home"
@@ -15,14 +16,18 @@
             android:title="Admin Panel" />
     </group>
 
-    <group>
-        <item
-            android:id="@+id/about_us"
-            android:icon="@drawable/about_us"
-            android:title="About us" />
-        <item
-            android:id="@+id/help"
-            android:icon="@drawable/help"
-            android:title="Help" />
-    </group>
+    <item android:title="Communicate">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/about_us"
+                    android:icon="@drawable/about_us"
+                    android:title="About us" />
+                <item
+                    android:id="@+id/help"
+                    android:icon="@drawable/help"
+                    android:title="Help" />
+            </group>
+        </menu>
+    </item>
 </menu>
