--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,43 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:padding="20dp"
-    android:gravity="bottom"
-    android:background="@color/main_color">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:src="@drawable/mnnit"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profilepic"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/profile_icon" />
 
-    <!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="180dp"-->
-<!--    android:padding="20dp"-->
-<!--    android:background="@color/material_dynamic_neutral_variant90">-->
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="horizontal">-->
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/profilepic"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="18dp"
+            android:text="User Name"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
-<!--    <ImageView-->
-<!--        android:layout_width="120dp"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:background="@drawable/mnnit"-->
-<!--        />-->
-<!--        <TextView-->
-<!--            android:layout_width="350dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="MNNIT ALLAHABAD"-->
-<!--            android:paddingLeft="30dp"-->
-<!--            android:textSize="15sp"-->
-<!--            android:textStyle="bold"-->
-<!--            android:paddingVertical="30dp"-->
-<!--            />-->
+        <TextView
+            android:id="@+id/useremail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/username"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="Useremail@email.com"
+            android:textColor="@color/black"
+            android:textSize="13dp" />
 
-<!--    </LinearLayout>-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1.5dp"
+            android:background="@color/black"
+            android:layout_below="@+id/useremail"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginTop="15dp" />
 
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
