--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -6,13 +6,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
+        android:layout_centerInParent="true"
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profilepic"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:src="@drawable/profile_icon" />
@@ -43,11 +43,20 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:background="@color/black"
             android:layout_below="@+id/useremail"
             android:layout_marginHorizontal="5dp"
-            android:layout_marginTop="15dp" />
+            android:layout_marginTop="15dp"
+            android:background="@color/black" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/btnedit"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignParentRight="true"
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/profile_edit_icon" />
 
 </RelativeLayout>
