--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,6 +21,7 @@
             android:background="@drawable/circle_border">
 
             <ImageView
+                android:id="@+id/profilepic"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_marginStart="9dp"
@@ -58,13 +58,13 @@
             android:textSize="14sp" />
 
         <ImageView
+            android:id="@+id/edit_img"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_alignParentRight="true"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
             android:src="@drawable/add_icon2" />
-
     </RelativeLayout>
 
 
