--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -61,7 +61,7 @@ android:id="@+id/parent">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="15dp"
         android:fitsSystemWindows="true"
         app:layout_constraintTop_toBottomOf="@id/login"
