--- a/app/src/main/res/layout/club_list_item.xml
+++ b/app/src/main/res/layout/club_list_item.xml
@@ -2,80 +2,90 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    app:layout_constraintWidth_percent="0.4"
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
+    android:layout_margin="5dp">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/createBillForOwnCardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:cardBackgroundColor="@color/grey_light"
-        app:cardCornerRadius="8dp"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="20dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="5dp"
+        android:backgroundTint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:strokeColor="@color/slate_300"
+        app:strokeWidth="1dp">
 
-        <LinearLayout
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:layout_height="match_parent"
+            android:padding="20dp">
+<!--            <RelativeLayout-->
+<!--                android:id="@+id/imgUser"-->
+<!--                android:layout_margin="30dp"-->
+<!--                app:layout_constraintHeight_percent="0.5"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_centerHorizontal="true"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                android:background="@drawable/circle_border">-->
+
+                <ImageView
+                    android:id="@+id/profilepic"
+                    android:layout_width="wrap_content"
+                    app:layout_constraintHeight_percent="0.5"
+                    android:layout_height="0dp"
+                    android:background="@drawable/circle"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/profile_icon"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+<!--            </RelativeLayout>-->
 
 
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:layout_width="270dp">
-
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/club_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/bariol_bold"
-                android:paddingLeft="10dp"
-                android:paddingTop="10dp"
+                android:textAlignment="center"
+                app:layout_constraintTop_toBottomOf="@id/profilepic"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:fontFamily="@font/nunito_bold"
+                android:layout_marginTop="10dp"
                 android:text="CC Club"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/bariol_bold"
-                android:paddingStart="10dp"
-                android:paddingBottom="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="10dp"
                 android:text="It is a awesome club."
                 android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/club_name"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:textSize="10sp" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </LinearLayout>
-            <RelativeLayout
-                android:id="@+id/imgUser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/circle_border">
-
-                <ImageView
-                    android:id="@+id/profilepic"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_marginStart="9dp"
-                    android:layout_marginTop="9dp"
-                    android:layout_marginEnd="9dp"
-                    android:layout_marginBottom="9dp"
-                    android:adjustViewBounds="true"
-                    android:background="@drawable/circle"
-                    android:padding="3dp"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/profile_icon" />
-            </RelativeLayout>
-
-        </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
