--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+    <color name="slate_300">#cbd5e1</color>
     <color name="main_color">#246EE9</color>
     <color name="helper_text_color">#A60606</color>
     <color name="light_blue">#ADD8E6</color>
