--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="@color/main_color"
-tools:context=".view.activities.SignupActivity"
+tools:context=".view.activities.SignUpActivity"
 android:id="@+id/parent">
 
     <com.google.android.material.textview.MaterialTextView
