--- a/app/src/main/res/layout/club_list_item.xml
+++ b/app/src/main/res/layout/club_list_item.xml
@@ -43,7 +43,7 @@
 <!--                android:background="@drawable/circle_border">-->
 
                 <ImageView
-                    android:id="@+id/profilepic"
+                    android:id="@+id/profile_pic"
                     android:layout_width="wrap_content"
                     app:layout_constraintHeight_percent="0.5"
                     android:layout_height="0dp"
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                app:layout_constraintTop_toBottomOf="@id/profilepic"
+                app:layout_constraintTop_toBottomOf="@id/profile_pic"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:fontFamily="@font/nunito_bold"
