--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,7 +21,7 @@
             android:background="@drawable/circle_border">
 
             <ImageView
-                android:id="@+id/profilepic"
+                android:id="@+id/profile_pic"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_marginStart="9dp"
