--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profilepic"
+            android:id="@+id/profile_pic"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
@@ -21,7 +21,7 @@
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/profilepic"
+            android:layout_below="@id/profile_pic"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="18dp"
             android:text="User Name"
